2010-05-04  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Holger Freyther.

        Fix a memory leak inside the QScriptValue.

        QSciptValuePrivate::toString should release all temporary variables.

        [Qt] QScriptValue::toString have a memory leak.
        https://bugs.webkit.org/show_bug.cgi?id=38112

        * qt/api/qscriptvalue_p.h:
        (QScriptValuePrivate::toString):

git-svn-id: svn://svn.chromium.org/blink/trunk@58755 bbb929c8-8fbe-4397-9dbb-9b2b20218538